# Finance_Advisor

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  config.toml  demo.py  finproc.py  pyproject.toml  pyrightconfig.json  requirements.txt  tasks.py
adapters/: base.py  legacy.py
categorizer/: rules.py  service.py
cli/: finproc.py
config/: loader.py  rules.examples.yaml  rules.yaml
data/: finance.sqlite
data/samples/invoices/: coffee_shop_01.txt  invoice_in_zomato_01.txt  invoice_us_uber_01.txt  restaurant_01.txt  rideshare_01.txt  safeway_01.txt  test_invoice.txt
ocr/: reader.py
parser/: doc_type.py  extractor.py  lineitems.py  normalizer.py  vendor.py
pipeline/: process_file.py  runner.py
scripts/: migrate_2025_09_08.py  reparse_all.py
sfa_cli/: process.py
sfa_core/: models.py
sfa_utils/: categories.py  categorizer.py  fingerprint.py  logging_setup.py  normalizers.py
smart_finance_advisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
storage/: __init__.py  migrations.py  schema.py  sqlite_store.py
tests/: conftest.py  test_adapters_legacy.py  test_categorizer.py  test_categorizer_rules.py  test_cli_exit_codes.py  test_cli_finproc.py  test_cli_finproc_cat.py  test_cli_json1.py  test_dedup.py  test_doc_type_and_items.py  test_extractor.py  test_imports.py  test_lineitems.py  test_lineitems_weighted.py  test_normalizer.py  test_normalizers.py  test_ocr_reader.py  test_rules_enhanced.py  test_sanity_flag.py  test_schema_migrations.py  test_total_safeway.py
tests/fixtures/: safeway_norm.txt
ui/: app.py
(+2 files in other folders)
